--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,25 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "lldb",
-      "request": "launch",
-      "args": [],
-      "cwd": "/Users/jaeheon/Desktop/Programming/Lang/Cpp/exception handling",
-      "program": "/Users/jaeheon/Desktop/Programming/Lang/Cpp/exception handling/build/Debug/outDebug"
-    }
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "C/C++ Runner: Debug Session",
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "/Users/jaeheon/Desktop/Programming/Lang/Cpp/exception handling",
+            "program": "/Users/jaeheon/Desktop/Programming/Lang/Cpp/exception handling/build/Debug/outDebug"
+        },
+        {
+            "name": "(lldb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "enter program name, for example ${workspaceFolder}/a.out",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb"
+        }
+    ]
 }
